# eve-online-industry-tracker

./: .gitignore  README.md  alembic.ini  config.json  config.py  dashboard.py  database.py  esi_api.py  eve_data.db  main.py  oauth.py  pyproject.toml  requirements.txt  streamlit_app.py
alembic/: env.py
classes/: character.py  character_manager.py  config_manager.py  corporation.py  corporation_manager.py  database_manager.py  database_models.py  esi.py  oauth.py  types.py
config/: config.json  import_sde.json  schemas.py  sde_tables.json
database/: eve_app.db-shm  eve_oauth.db-shm
docs/: cost_allocation.txt  market_order_pricing_advisory.txt
flask_app/: flask_app.py
scripts/: backfill_asset_acquisition_costs.py  backfill_corp_transfer_costs.py  check_t1_submanufacturing.py  import_sde.py  lookup_system_id.py  register_characters.py  seed_structure_cache.py  setup_venv.ps1  smoke_test_flask.py
tests/: conftest.py  test_asset_history_provenance.py  test_backfill_corp_transfer_costs.py  test_corp_market_orders.py  test_industry_builder_phase2.py  test_industry_hangar_scoping.py  test_industry_portfolio_service.py  test_industry_service_calculations.py  test_industry_service_history_fallback.py  test_industry_service_properties.py  test_invention_inventory_pipeline.py  test_realized_profit_ledger.py  test_shopping_list.py
utils/: app_init.py  flask_api.py  formatters.py  ore_skill_map.py  table_viewer.py
webpages/: characters.py  corporations.py  database_maintenance.py  industry_builder.py  industry_profiles.py  marketorders.py  ore_calculator.py
(+236 files in other folders)
